Fix vertical scrollbars on windows

--- a/app/assets/stylesheets/externals/antd-customization.scss
+++ b/app/assets/stylesheets/externals/antd-customization.scss
@@ -264,6 +264,7 @@
   // Make tables scrollable if they are too big to be displayed.
   .ant-table-content {
     overflow-x: auto;
+    overflow-y: hidden;
   }
 
   .ant-modal-body {
